--- a/WhoWroteIt/app/src/main/res/values/strings.xml
+++ b/WhoWroteIt/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WhoWroteIt</string>
-    <string name="instructions">Enter a book name to find out who wrote the book. </string>
-    <string name="button_text">Search Books</string>
-    <string name="input_hint">Book Title</string>
+    <string name="instructions">instruction</string>
+    <string name="input_hint">input_hint</string>
+    <string name="button_text">button_text</string>
 </resources>
