--- a/WhoWroteIt/app/src/main/res/values/strings.xml
+++ b/WhoWroteIt/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="instructions">Enter a book name to find out who wrote the book.</string>
     <string name="input_hint">Search Books</string>
     <string name="button_text">Book Title</string>
+    <string name="no_results">"No Results Found"</string>
 </resources>
