--- a/WhoWroteIt/app/src/main/res/values/strings.xml
+++ b/WhoWroteIt/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="input_hint">Search Books</string>
     <string name="button_text">Book Title</string>
     <string name="no_results">"No Results Found"</string>
+    <string name="loading">Loading...</string>
+    <string name="no_search_term">Please enter a search term</string>
+    <string name="no_network">Please check your network connection and try again.</string>
 </resources>
