--- a/ServiceLabs/app/src/main/res/values/strings.xml
+++ b/ServiceLabs/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ServiceLabs</string>
     <string name="start_service">start_service</string>
+    <string name="starting_service">Starting a service</string>
 </resources>
