--- a/ServiceLabs/app/src/main/res/values/strings.xml
+++ b/ServiceLabs/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">ServiceLabs</string>
-    <string name="start_service">start_service</string>
+    <string name="start_service">Start Service</string>
+    <string name="stop_service">Stop Service</string>
     <string name="starting_service">Starting a service</string>
+    <string name="stopping_service">Stopping a service</string>
 </resources>
