--- a/ServiceLabs/app/src/main/res/values/strings.xml
+++ b/ServiceLabs/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="stop_service">Stop Service</string>
     <string name="starting_service">Starting a service</string>
     <string name="stopping_service">Stopping a service</string>
+    <string name="start_an_intent_service">Start an Intent service</string>
 </resources>
