--- a/SQLiteLabs/app/src/main/res/values/strings.xml
+++ b/SQLiteLabs/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="enter_user_id">Please, enter a userId</string>
     <string name="default_user">default user</string>
     <string name="user_info">The user with the name %1$s stays at %2$s and works as a %3$s.</string>
+    <string name="search_by_id">Search By Id</string>
 </resources>
